--- a/mockup_eric/index.html
+++ b/mockup_eric/index.html
@@ -17,21 +17,19 @@
 		<article>
 			<div style = "float: left; font-size: 11px; width: 165px">
 				<h3 id = "hi">Heirachy</h3>
-				<ul style = "list-style-type: circle; margin-left: -20px">
-					<li><a href = "index.html">2011</a></li>
-					<li><a href = "index.html">2012</a></li>
-					<li style = "list-style-type: none; margin-left: -25px"><ul style = "list-style-type: circle">
-						<li><a href = "account.html#login">Midsummer</a></li>
-							<li style = "list-style-type: none; margin-left: -25px"><ul style = "list-style-type: disc">
-							<li><a href = "account.html#login">What is this event?</a></li>
-							<li><a href = "register.html">a a a a a a a a a a a a a a a a a a a a a a a a a a </a></li>
-							<li><a href = "register.html">Feedback</a></li>
-							<li><a href = "register.html">Checklist</a></li>
+				<ul id = "rootChildren">
+					<li><a href = "index.html">2013</a></li>
+					<li class = "indent">
+						<ul style = "list-style-type: circle">
+						<li><a href = "#">Ikea Food Testing</a></li>
+							<li class = "indent">
+							<ul style = "list-style-type: disc">
+								<li><a href = "#">Transport</a></li>
+							</ul></li>
 						</ul></li>
-						<li><a href = "register.html">UWA Open Day 2012</a></li>
-					</ul></li>
-					<li><a href = "account.html">2013</a></li>
+					<li><a href = "#">2014</a></li>
 				</ul>
+				<p style = "font-size: 12px; text-align: right"><br/><a id = "add-root-item" href = "#"> + Add Item To Root</a></p>
 			</div>
 			
 			<div style = "text-align: left; width: 740px; margin-left: 180px; padding-left: 40px; border-left: 1px solid">
@@ -54,14 +52,25 @@
 					</form>
 				</div>
 				
-				<form id = "add-item-form">
+				<form id = "add-item-form" class = "add-item-forms">
 				<p>Title: <input type = "text" id = "new-item-title" size = "106" style = "margin-left: 10px"/></p>
 				<p>Body: <input type = "text" id = "new-item-body" size = "106" style = "margin-left: 6px"/></p>
-				<p>Enable Complete/Incomplete status?<input type = "checkbox" name = "active"/></p>
+				<p>Enable Complete/Incomplete status?<input type = "checkbox" id = "new-item-active"/></p>
 				<p style = "text-align: center">
 					<a id = "add-item-confirm" href = "#">Confirm Item</a> | 
 					<a id = "add-item-clear" href = "#">Clear</a> | 
 					<a id = "add-item-cancel" href = "#">Cancel</a>
+				</p>
+				</form>
+				
+				<form id = "add-root-item-form" class = "add-item-forms">
+				<p>Title: <input type = "text" id = "new-root-item-title" size = "106" style = "margin-left: 10px"/></p>
+				<p>Body: <input type = "text" id = "new-root-item-body" size = "106" style = "margin-left: 6px"/></p>
+				<p>Enable Complete/Incomplete status?<input type = "checkbox" id = "new-root-item-active"/></p>
+				<p style = "text-align: center">
+					<a id = "add-root-item-confirm" href = "#">Confirm Item</a> | 
+					<a id = "add-root-item-clear" href = "#">Clear</a> | 
+					<a id = "add-root-item-cancel" href = "#">Cancel</a>
 				</p>
 				</form>
 			</div>
