Mostly CSS updates and fixes for the initial (new.html) page

--- a/mockup_eric/index.html
+++ b/mockup_eric/index.html
@@ -7,14 +7,14 @@
 </head>
 <body>
 	<div id = "centerDiv">
-		<div style = "height:70px; padding-top: 10px;">
+		<div style = "width: 500px; height:70px; padding-top: 10px;">
 			<p style = "font-weight: 700; font-size: 300%; letter-spacing: -2px; margin-top: 0px; color: #FFFFFF">Swedish Club of WA</p>
-			<p style = "font-weight: 200; font-size: 220%; letter-spacing: -2px; margin-top: -45px; margin-left: 100px"><i>Club Process System</i></p>
+			<p style = "font-weight: 200; font-size: 220%; letter-spacing: -2px; margin-top: -45px; margin-left: 100px"><i>Club Process System - Sign In</i></p>
 		</div>
 		
 		<div id = "loginTab">
 			<form action = "cps.html">
-				<p>Username: <input type = "text" id = "new-item-title" size = "20" style = "margin-left: 10px"/></p>
+				<p>Email:<input type = "text" id = "new-item-title" size = "20" style = "margin-left: 38px"/></p>
 				<p>Password:<input type = "password" id = "new-item-body" size = "20" style = "margin-left: 15px"/></p>
 				<button id = "loginButton" type = "submit">Log In</button>
 			</form>
