--- a/mockup_eric/cps.html
+++ b/mockup_eric/cps.html
@@ -10,7 +10,7 @@
 <body>
 	<div id = "container">
 		<header>
-			<div style = "float: left; width: 500px; padding-top: 10px;">
+			<div style = "float: left; width: 500px; height: 70px; padding-top: 10px;">
 			<p style = "font-weight: 700; font-size: 300%; letter-spacing: -2px; margin-top: 0px; color: #FFFFFF">Swedish Club of WA</p>
 			<p style = "font-weight: 200; font-size: 220%; letter-spacing: -2px; margin-top: -45px; margin-left: 100px"><i>Club Process System</i></p>
 			</div>
